# eggscript-jit

./: Cargo.toml  rustfmt.toml  shell.nix
ast/: Cargo.toml
ast/src/: context.rs  grammar.pest  lib.rs  operators.rs  parser.rs  pretty_error.rs  symbol.rs
ast/src/expressions/: block.rs  else_block.rs  expression.rs  field_access.rs  for_block.rs  function_call.rs  function_declaration.rs  if_block.rs  math.rs  mod.rs  pretty_print.rs  primitive.rs  return_statement.rs  scope.rs  variable_assignment.rs  variable_declaration.rs  while_block.rs
ast/src/lower/: binary.rs  context.rs  field_access.rs  for_block.rs  function_call.rs  if_block.rs  logic.rs  mod.rs  primitive.rs  return_statement.rs  scope.rs  unary.rs  variable_assignment.rs  while_block.rs
cli/: Cargo.toml
cli/src/: eggscript.rs  integration_tests.rs  llvm.rs  main.rs
cli/src/tests/: general.rs  loops.rs  math.rs  math1.egg  misc.rs  mod.rs  recursion.rs  setup.rs
cli/src/tests/test_cases/: conditionals.egg  for_loop1.egg  logic.egg  math1.egg  math2.egg  math3.egg  recursion1.egg  while_loop1.egg
interpreter/: Cargo.toml
interpreter/src/: function.rs  instruction.rs  interpreter.rs  lib.rs
interpreter/src/runtime/: mapping.rs  mod.rs  print.rs
mir/: Cargo.toml
mir/src/: lib.rs  mir.rs  operators.rs  primitive.rs  span.rs  unit.rs  value.rs
mir/src/lower/: common_context.rs  mod.rs
mir/src/lower/eggscript/: context.rs  mod.rs
mir/src/lower/llvm/: context.rs  math.rs  mod.rs
types/: Cargo.toml
types/src/: function_type.rs  lib.rs  mem.rs  types.rs
