[package]
name = "eggscript_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
eggscript_ast = { path = "../ast" }
eggscript_interpreter = { path = "../interpreter" }
eggscript_mir = { path = "../mir" }
eggscript_types = { path = "../types" }
inkwell = { version = "0.5.0", features = ["llvm18-0-prefer-static"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serial_test = "3.2.0"
